--- a/package.json
+++ b/package.json
@@ -57,11 +57,13 @@
   "dependencies": {
     "@matterlabs/zksync-nuxt-core": "^1.4.4",
     "@nuxt/typescript-runtime": "latest",
+    "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/google-gtag": "latest",
     "@nuxtjs/sentry": "latest",
     "@nuxtjs/stylelint-module": "^4.0.0",
     "@ramp-network/ramp-instant-sdk": "^2.5.0",
     "blockies-ts": "1.0.0",
+    "crypto-js": "^4.1.1",
     "ethers": "^5.1.3",
     "lottie-web": "^5.7.8",
     "mixpanel-browser": "^2.42.0",
@@ -89,6 +91,7 @@
     "@nuxtjs/eslint-config-typescript": "latest",
     "@nuxtjs/google-fonts": "latest",
     "@nuxtjs/style-resources": "latest",
+    "@types/crypto-js": "^4.0.2",
     "@types/jest": "^26.0.23",
     "@types/mixpanel-browser": "^2.35.8",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
