--- a/environments/.env.rinkeby-beta
+++ b/environments/.env.rinkeby-beta
@@ -7,4 +7,10 @@ ZK_NETWORK="rinkeby-beta"
 RAMP_MAINNET_HOST_API_KEY=j3b3oszn2vsr4qkz4att67zrucm6m6yjpfvxvtyy
 RAMP_RINKEBY_HOST_API_KEY=pcrtzve8ax7vjamoct77ombequtqhuxbc8wdknwg
 RAMP_ROPSTEN_HOST_API_KEY=85quy9gjwceh3rnca2nffo6wq67q776u6rjkyajf
+BANXA_MAINNET_HOST_API_KEY=ZKTEST01
+BANXA_RINKEBY_HOST_API_KEY=ZKTEST01
+BANXA_ROPSTEN_HOST_API_KEY=ZKTEST01
+BANXA_MAINNET_SECRET_KEY=kKKMmVZdlWcOQWZsjrHMoSFUIzJfvmNi
+BANXA_RINKEBY_SECRET_KEY=kKKMmVZdlWcOQWZsjrHMoSFUIzJfvmNi
+BANXA_ROPSTEN_SECRET_KEY=kKKMmVZdlWcOQWZsjrHMoSFUIzJfvmNi
 MIXPANEL_TOKEN=5600dbc62a772c26f25b8df97ee54701
