--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -12,8 +12,9 @@ jobs:
   build_and_preview:
     if: "${{ github.event.pull_request.head.repo.full_name == github.repository }}"
     runs-on: ubuntu-latest
+    environment: test
     outputs:
-      results: "${{ steps.deploy_preview.outputs.urls }}"
+      output_urls: "${{ steps.preview_deploy.outputs.urls }}"
     steps:
       - uses: actions/checkout@v2
 
@@ -37,12 +38,10 @@ jobs:
         uses: matter-labs/action-hosting-deploy@v0
         id: deploy_preview
         with:
-          repoToken: "${{ secrets.GITHUB_TOKEN }}"
-          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_DAPP_SCAN }}"
-          target: ${{ github.event.inputs.network || 'rinkeby' }}
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}"
+          target: ${{ github.event.inputs.network || 'prod-rinkeby' }}
           projectId: zksync-dapp-scan
-        env:
-          FIREBASE_CLI_PREVIEWS: hostingchannels
 
   testing:
     needs: build_and_preview
